# QuantKing

./: LICENSE  README.md  README_Quantitative_Strategies.md  README_Web_Interface.md  demo_charts_websocket.py  demo_llm_nlp_simple.py  main.py  setup.py
backend/: CMakeLists.txt
backend/include/: data_loader.hpp  strategy.hpp
backend/include/common/: types.hpp
backend/src/: data_loader.cpp  main.cpp  order_executor.cpp  risk_manager.cpp  strategy.cpp
data_service/fetchers/: alpha_vantage_fetcher.py  binance_fetcher.py  yahoo_fetcher.py
data_service/processors/: data_processor.py
examples/: fetch_public_data.py  yahoo_example.py
static/: index.html
static/js/: app.js
